# formul.ai

./: .dockerignore  .env  .env.docker  .env.example  .env.host-develop  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pg-healthcheck.sh  pnpm-lock.yaml
.github/: copilot-instructions.md
ai/: ai-entrypoint.sh
auth/: README.md  pom.xml
client/: .env  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  architecture_overview.md  ci.md  contributing.md  mcp_migrations.md  privacy.md  rate-limiting.md  technology.md  troubleshooting.md
front-end/: package-lock.json
frontend/: .env.development.local  .gitignore  .prettierignore  Dockerfile  README.md  cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  (+2 more)
processing/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  test.py  worker.py
processing/alembic/: env.py  script.py.mako
processing/alembic/versions/: 20250517180854_f6185caa4512_initial_migrations.py  20250517184619_726377704481_initial_migrations.py  20250702005012_62e497599537_change_result_column_to_jsonb.py
processing/app/: config.py  database.py  deps.py  fixtures.py  main.py  models.py  schemas.py
processing/app/api/: deps.py  main.py  router.py
processing/app/api/routes/: processing.py  survey.py  task.py
processing/app/api/v1/endpoints/: survey.py  task.py
processing/app/core/: config.py  exceptions.py
processing/app/db/: database.py  sessions.py
processing/app/db/migrations/: alembic.ini  env.py
processing/app/models/: Survey.py  SurveyAnswer.py  Task.py  TaskStatus.py  __init__.py  survey.py  survey_answer.py  task.py  task_status.py
processing/app/repository/: survey_repository.py  task_repository.py
processing/app/schemas/: AnalyzeSurveyData.py  SurveyPoints.py  SurveyPointsSentimentBucket.py  analyze_survey_data.py  analyze_survey_result.py  survey_points.py  survey_points_sentiment_bucket.py
processing/app/schemas/dto/: SurveyStatusReponse.py  TaskResponse.py  survey_status_response.py  task_response.py
processing/app/services/: analysis_service.py  processing_service.py  survey_service.py  task_service.py
processing/app/tests/: test_analysis.py  test_main.py  test_processing.py  test_survey.py  test_task.py
processing/app/tests/integration/: test_task.py
processing/app/tests/unit/: test_analysis.py  test_survey.py
processing/app/utils/: exceptions.py  jwt_utils.py  redis_publisher.py
processing/tests/: conftest.py
processing/tests/integration/: test_task.py
processing/tests/unit/: test_analysis.py  test_analysis_mcp_integration.py  test_database.py  test_deps.py  test_survey.py  test_task_service.py
(+272 files in other folders)
