[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ollama>=0.4.8",
    "psycopg[binary]>=3.2.7",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "riff>=0.0.287.0",
]

[tool.riff]
checkers = [
    "black --check processing",
    "ruff check processing",
    "mypy processing"
]

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "W", "C", "N"]
lint.ignore = ["E501", "E711"]  # Example: Ignore line length errors
exclude = ["migrations", "tests"]

line-length = 100
